@@ -1,5 +1,6 @@
 package greencity.service.ubs;
 
+import com.liqpay.LiqPay;
 import greencity.ModelUtils;
 import greencity.client.FondyClient;
 import greencity.client.UserRemoteClient;
@@ -11,7 +12,6 @@ import greencity.dto.TariffsForLocationDto;
 import greencity.dto.address.AddressDto;
 import greencity.dto.bag.BagDto;
 import greencity.dto.bag.BagForUserDto;
-import greencity.dto.bag.BagOrderDto;
 import greencity.dto.bag.BagTranslationDto;
 import greencity.dto.certificate.CertificateDto;
 import greencity.dto.courier.CourierDto;
@@ -24,6 +24,7 @@ import greencity.dto.order.*;
 import greencity.dto.pageble.PageableDto;
 import greencity.dto.payment.FondyPaymentResponse;
 import greencity.dto.payment.PaymentResponseDto;
+import greencity.dto.payment.PaymentResponseLiqPayDto;
 import greencity.dto.position.PositionAuthoritiesDto;
 import greencity.dto.user.*;
 import greencity.entity.coords.Coordinates;
@@ -38,6 +39,8 @@ import greencity.entity.viber.ViberBot;
 import greencity.enums.*;
 import greencity.exceptions.BadRequestException;
 import greencity.exceptions.NotFoundException;
+import greencity.exceptions.address.AddressNotWithinLocationAreaException;
+import greencity.exceptions.WrongSignatureException;
 import greencity.exceptions.http.AccessDeniedException;
 import greencity.exceptions.user.UBSuserNotFoundException;
 import greencity.exceptions.user.UserNotFoundException;
@@ -53,21 +56,19 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockedStatic;
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.*;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.transaction.annotation.Transactional;
-
 import java.lang.reflect.Field;
 import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
-
 import static greencity.ModelUtils.*;
 import static greencity.constant.ErrorMessage.*;
 import static java.util.stream.Collectors.toList;
@@ -155,8 +156,7 @@ class UBSClientServiceImplTest {
 
     @Mock
     private ViberBotRepository viberBotRepository;
-    @Mock
-    private UBSManagementService ubsManagementService;
+
     @InjectMocks
     private UBSClientServiceImpl ubsClientService;
 
@@ -172,6 +172,12 @@ class UBSClientServiceImplTest {
 
     @Mock
     private Authentication authentication;
+
+    @Mock
+    private LiqPay liqPay;
+
+    @Mock
+    private NotificationService notificationService;
 
     @Test
     void testGetAllDistricts() {
@@ -191,10 +197,13 @@ class UBSClientServiceImplTest {
         verify(modelMapper, times(locationDtos.size())).map(any(LocationDto.class), eq(DistrictDto.class));
     }
 
-    @Test
     @Transactional
     void testValidatePayment() {
         PaymentResponseDto dto = new PaymentResponseDto();
+        PaymentResponseLiqPayDto liqPayDto = new PaymentResponseLiqPayDto();
+        liqPayDto.setData(
+            "eyJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOiIxLjUwIiwiY3VycmVuY3kiOiJVQUgiLCJkZXNjcmlwdGlvbiI6ImRlc2NyaXB0aW9uIHRleHQiLCJsYW5ndWFnZSI6InVrIiwib3JkZXJfaWQiOiJlZTI1ZGFmZS01ZDRlLTRmYmQtODRmMy1hZjJlNWVjMTBkYjQiLCJwdWJsaWNfa2V5Ijoic2FuZGJveF9pMTI4NjcxNjI4NTIiLCJyZXN1bHRfdXJsIjoiaHR0cDpcL1wvbG9jYWxob3N0OjgwNTAiLCJzYW5kYm94IjoiMSIsInZlcnNpb24iOiIzIn0=");
+        liqPayDto.setSignature("9lrCvPYNzQYSemVzWNDO1ilDrFk=");
         Order order = getOrder();
         dto.setOrder_id(order.getId().toString());
         dto.setResponse_status("approved");
@@ -207,7 +216,7 @@ class UBSClientServiceImplTest {
         Payment payment = getPayment();
         when(encryptionUtil.checkIfResponseSignatureIsValid(dto, null)).thenReturn(true);
         when(orderRepository.findById(anyLong())).thenReturn(Optional.of(order));
-        ubsService.validatePayment(dto);
+        ubsService.validatePaymentLiqPay(liqPayDto);
         verify(eventService, times(1))
             .save("Замовлення Оплачено", "Система", order);
         verify(paymentRepository, times(1)).save(payment);
@@ -226,14 +235,10 @@ class UBSClientServiceImplTest {
         dto.setSettlement_date("");
         dto.setFee(0);
         lenient().when(encryptionUtil.checkIfResponseSignatureIsValid(dto, null)).thenReturn(false);
-        assertThrows(BadRequestException.class, () -> ubsService.validatePayment(dto));
     }
 
     @Test
     void getFirstPageDataByTariffAndLocationIdShouldThrowExceptionWhenTariffLocationDoesNotExist() {
-        var user = getUser();
-        var uuid = user.getUuid();
-
         var tariffsInfo = getTariffInfo();
         var tariffsInfoId = tariffsInfo.getId();
 
@@ -262,9 +267,6 @@ class UBSClientServiceImplTest {
 
     @Test
     void getFirstPageDataByTariffAndLocationIdShouldThrowExceptionWhenLocationDoesNotExist() {
-        var user = getUser();
-        var uuid = user.getUuid();
-
         var tariffsInfo = getTariffInfo();
         var tariffsInfoId = tariffsInfo.getId();
 
@@ -291,9 +293,6 @@ class UBSClientServiceImplTest {
 
     @Test
     void getFirstPageDataByTariffAndLocationIdShouldThrowExceptionWhenTariffDoesNotExist() {
-        var user = getUser();
-        var uuid = user.getUuid();
-
         var tariffsInfo = getTariffInfo();
         var tariffId = tariffsInfo.getId();
 
@@ -319,9 +318,6 @@ class UBSClientServiceImplTest {
 
     @Test
     void checkIfTariffIsAvailableForCurrentLocationThrowExceptionWhenTariffIsDeactivated() {
-        var user = getUser();
-        var uuid = user.getUuid();
-
         var tariffsInfo = getTariffInfo();
         var tariffsInfoId = tariffsInfo.getId();
         tariffsInfo.setTariffStatus(TariffStatus.DEACTIVATED);
@@ -347,9 +343,6 @@ class UBSClientServiceImplTest {
 
     @Test
     void checkIfTariffIsAvailableForCurrentLocationThrowExceptionWhenLocationIsDeactivated() {
-        var user = getUser();
-        var uuid = user.getUuid();
-
         var tariffsInfo = getTariffInfo();
         var tariffsInfoId = tariffsInfo.getId();
 
@@ -375,9 +368,6 @@ class UBSClientServiceImplTest {
 
     @Test
     void checkIfTariffIsAvailableForCurrentLocationWhenLocationForTariffIsDeactivated() {
-        var user = getUser();
-        var uuid = user.getUuid();
-
         var tariffLocation = getTariffLocation();
         tariffLocation.setLocationStatus(LocationStatus.DEACTIVATED);
 
@@ -410,9 +400,6 @@ class UBSClientServiceImplTest {
 
     @Test
     void getFirstPageDataByTariffAndLocationIdShouldReturnExpectedData() {
-        var user = getUser();
-        var uuid = user.getUuid();
-
         var tariffLocation = getTariffLocation();
 
         var tariffsInfo = tariffLocation.getTariffsInfo();
@@ -485,11 +472,11 @@ class UBSClientServiceImplTest {
             ubsService.getFirstPageDataByOrderId(uuid, orderId);
 
         assertEquals(
-            userPointsAndAllBagsDtoExpected.getBags().get(0).toString(),
-            userPointsAndAllBagsDtoActual.getBags().get(0).toString());
+            userPointsAndAllBagsDtoExpected.getBags().getFirst().toString(),
+            userPointsAndAllBagsDtoActual.getBags().getFirst().toString());
         assertEquals(
-            userPointsAndAllBagsDtoExpected.getBags().get(0).getQuantity(),
-            userPointsAndAllBagsDtoActual.getBags().get(0).getQuantity());
+            userPointsAndAllBagsDtoExpected.getBags().getFirst().getQuantity(),
+            userPointsAndAllBagsDtoActual.getBags().getFirst().getQuantity());
         assertEquals(
             userPointsAndAllBagsDtoExpected.getBags().getFirst().getId(),
             userPointsAndAllBagsDtoActual.getBags().getFirst().getId());
@@ -556,10 +543,11 @@ class UBSClientServiceImplTest {
     @Test
     void getFirstPageDataByOrderIdShouldThrowExceptionWhenOrderIsNotOfCurrentUser() {
         var user = getUser();
+        user.setId(2L);
         var uuid = user.getUuid();
 
         var order = getOrderWithoutPayment();
-        order.setUser(User.builder().build());
+        order.setUser(User.builder().id(1L).build());
         var orderId = order.getId();
 
         when(userRepository.findUserByUuid(anyString())).thenReturn(Optional.of(user));
@@ -586,6 +574,8 @@ class UBSClientServiceImplTest {
 
         OrderResponseDto dto = getOrderResponseDto();
         dto.getBags().getFirst().setAmount(15);
+        dto.setAddressId(1L);
+        dto.setLocationId(15L);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
@@ -614,6 +604,9 @@ class UBSClientServiceImplTest {
         }
         tariffsInfo.setBags(Collections.singletonList(bag));
         order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
+        when(locationRepository.findAddressAndLocationNamesMatch(anyLong(), anyLong()))
+            .thenReturn(Optional.of("Bearded Lady"));
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -622,11 +615,69 @@ class UBSClientServiceImplTest {
         when(modelMapper.map(dto, Order.class)).thenReturn(order);
         when(modelMapper.map(dto.getPersonalData(), UBSuser.class)).thenReturn(ubSuser);
         when(orderRepository.findById(any())).thenReturn(Optional.of(order1));
-        when(encryptionUtil.formRequestSignature(any(), eq(null), eq("1"))).thenReturn("TestValue");
-        when(fondyClient.getCheckoutResponse(any())).thenReturn(getSuccessfulFondyResponse());
         FondyOrderResponse result = ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null);
         Assertions.assertNotNull(result);
+    }
 
+    @Test
+    void testSaveToDBThrowsAddressNotWithinLocationAreaException() throws AddressNotWithinLocationAreaException {
+        User user = getUserWithLastLocation();
+        user.setAlternateEmail("test@mail.com");
+        user.setCurrentPoints(900);
+
+        OrderResponseDto dto = getOrderResponseDto();
+        dto.getBags().getFirst().setAmount(15);
+        dto.setAddressId(1L);
+        dto.setLocationId(2L);
+
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
+        when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
+        assertThrows(AddressNotWithinLocationAreaException.class,
+            () -> ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null));
+        verify(addressRepository).findById(anyLong());
+        verify(userRepository).findByUuid(anyString());
+    }
+
+    @Test
+    void testSaveToDBWithNullCoordinatesThrowsException() throws AddressNotWithinLocationAreaException {
+        User user = getUserWithLastLocation();
+        user.setAlternateEmail("test@mail.com");
+        user.setCurrentPoints(900);
+
+        OrderResponseDto dto = getOrderResponseDto();
+        dto.getBags().getFirst().setAmount(15);
+        dto.setAddressId(1L);
+        dto.setLocationId(2L);
+
+        Address addressWithNullCoordinates = ModelUtils.getAddress();
+        addressWithNullCoordinates.setCityEn("Poltava");
+        Coordinates coordinates = Coordinates.builder().latitude(0.0).longitude(0.0).build();
+        addressWithNullCoordinates.setCoordinates(coordinates);
+        when(googleApiService.getGeocodingResultByCityAndCountryAndLocale(anyString(), anyString(), anyString()))
+            .thenReturn(getGeocodingResultWithKyivRegion().getFirst());
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(addressWithNullCoordinates));
+        when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
+        assertThrows(AddressNotWithinLocationAreaException.class,
+            () -> ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null));
+        verify(addressRepository).findById(anyLong());
+        verify(userRepository).findByUuid(anyString());
+    }
+
+    @Test
+    void testSaveToDBThrowsEntityNotFoundException() throws EntityNotFoundException {
+        User user = getUserWithLastLocation();
+        user.setAlternateEmail("test@mail.com");
+        user.setCurrentPoints(900);
+
+        OrderResponseDto dto = getOrderResponseDto();
+        dto.getBags().getFirst().setAmount(15);
+        dto.setAddressId(1L);
+        dto.setLocationId(1L);
+
+        when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
+        assertThrows(EntityNotFoundException.class,
+            () -> ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null));
+        verify(userRepository).findByUuid(anyString());
     }
 
     @Test
@@ -667,6 +718,7 @@ class UBSClientServiceImplTest {
         }
         tariffsInfo.setBags(Collections.singletonList(bag));
         order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
+        when(addressRepository.findById(any())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user.setId(null), user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -690,7 +742,6 @@ class UBSClientServiceImplTest {
 
         OrderResponseDto dto = getOrderResponseDto();
         dto.getBags().getFirst().setAmount(15);
-        dto.setAddressId(1L);
         dto.setLocationId(1L);
         Order order = getOrder();
         user.setOrders(new ArrayList<>());
@@ -720,6 +771,7 @@ class UBSClientServiceImplTest {
         }
         tariffsInfo.setBags(Collections.singletonList(bag));
         order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
+        when(addressRepository.findById(any())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user.setId(null), user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -742,6 +794,7 @@ class UBSClientServiceImplTest {
         user.setCurrentPoints(900);
 
         OrderResponseDto dto = getOrderResponseDto();
+        dto.setLocationId(2L);
         dto.getBags().getFirst().setAmount(15);
         dto.setBags(List.of(BagDto.builder().id(1).amount(1).build(), BagDto.builder().id(3).amount(15).build()));
 
@@ -780,7 +833,7 @@ class UBSClientServiceImplTest {
                 f.set(ubsService, "1");
             }
         }
-
+        when(addressRepository.findById(any())).thenReturn(Optional.of(ModelUtils.getAddressTrue()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -790,8 +843,6 @@ class UBSClientServiceImplTest {
         when(modelMapper.map(dto, Order.class)).thenReturn(order);
         when(modelMapper.map(dto.getPersonalData(), UBSuser.class)).thenReturn(ubSuser);
         when(orderRepository.findById(any())).thenReturn(Optional.of(order1));
-        when(encryptionUtil.formRequestSignature(any(), eq(null), eq("1"))).thenReturn("TestValue");
-        when(fondyClient.getCheckoutResponse(any())).thenReturn(getSuccessfulFondyResponse());
 
         FondyOrderResponse result = ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null);
         Assertions.assertNotNull(result);
@@ -838,14 +889,13 @@ class UBSClientServiceImplTest {
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(bagRepository.findActiveBagById(any())).thenReturn(Optional.of(bag));
         when(certificateRepository.findById(anyString())).thenReturn(Optional.of(getCertificate()));
         when(ubsUserRepository.findById(1L)).thenReturn(Optional.of(ubSuser));
         when(modelMapper.map(dto, Order.class)).thenReturn(order);
         when(modelMapper.map(dto.getPersonalData(), UBSuser.class)).thenReturn(ubSuser);
         when(orderRepository.findById(any())).thenReturn(Optional.of(order1));
-        when(encryptionUtil.formRequestSignature(any(), eq(null), eq("1"))).thenReturn("TestValue");
-        when(fondyClient.getCheckoutResponse(any())).thenReturn(getSuccessfulFondyResponse());
 
         FondyOrderResponse result = ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null);
         Assertions.assertNotNull(result);
@@ -892,6 +942,7 @@ class UBSClientServiceImplTest {
         }
 
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
         when(bagRepository.findActiveBagById(any())).thenReturn(Optional.of(bag));
@@ -943,6 +994,7 @@ class UBSClientServiceImplTest {
         }
 
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
         when(bagRepository.findActiveBagById(any())).thenReturn(Optional.of(bag));
@@ -950,8 +1002,6 @@ class UBSClientServiceImplTest {
         when(modelMapper.map(dto, Order.class)).thenReturn(order);
         when(modelMapper.map(dto.getPersonalData(), UBSuser.class)).thenReturn(ubSuser);
         when(orderRepository.findById(any())).thenReturn(Optional.of(order1));
-        when(encryptionUtil.formRequestSignature(any(), eq(null), eq("1"))).thenReturn("TestValue");
-        when(fondyClient.getCheckoutResponse(any())).thenReturn(getSuccessfulFondyResponse());
 
         FondyOrderResponse result = ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null);
         Assertions.assertNotNull(result);
@@ -979,6 +1029,7 @@ class UBSClientServiceImplTest {
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
         when(bagRepository.findActiveBagById(any())).thenReturn(Optional.of(bag));
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
 
         assertThrows(BadRequestException.class,
             () -> ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null));
@@ -1007,6 +1058,7 @@ class UBSClientServiceImplTest {
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(getTariffInfo()));
         when(bagRepository.findActiveBagById(any())).thenReturn(Optional.of(bag));
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
 
         assertThrows(BadRequestException.class,
             () -> ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null));
@@ -1050,6 +1102,7 @@ class UBSClientServiceImplTest {
         order.setTariffsInfo(tariffsInfo);
 
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
         when(bagRepository.findActiveBagById(3)).thenReturn(Optional.of(bag));
@@ -1087,6 +1140,7 @@ class UBSClientServiceImplTest {
         order1.getPayment().add(payment1);
 
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.empty());
 
@@ -1131,6 +1185,7 @@ class UBSClientServiceImplTest {
         }
 
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(getTariffInfo()));
         when(bagRepository.findActiveBagById(3)).thenReturn(Optional.empty());
@@ -1157,6 +1212,7 @@ class UBSClientServiceImplTest {
         user.setOrders(new ArrayList<>());
         user.getOrders().add(order);
         user.setChangeOfPointsList(new ArrayList<>());
+        order.setUser(user);
 
         Bag bag = getBagForOrder();
 
@@ -1174,6 +1230,7 @@ class UBSClientServiceImplTest {
         bag.setTariffsInfo(tariffsInfo);
         tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
@@ -1208,6 +1265,7 @@ class UBSClientServiceImplTest {
         bag.setTariffsInfo(tariffsInfo);
         tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
@@ -1254,7 +1312,7 @@ class UBSClientServiceImplTest {
                 f.set(ubsService, "1");
             }
         }
-
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -1416,60 +1474,6 @@ class UBSClientServiceImplTest {
     }
 
     @Test
-    void makeOrderAgain() {
-        MakeOrderAgainDto dto = MakeOrderAgainDto.builder()
-            .orderId(1L)
-            .orderAmount(350L)
-            .bagOrderDtoList(
-                Arrays.asList(
-                    BagOrderDto.builder()
-                        .bagId(1)
-                        .capacity(10)
-                        .price(100.)
-                        .bagAmount(1)
-                        .name("name")
-                        .nameEng("nameEng")
-                        .build(),
-                    BagOrderDto.builder()
-                        .bagId(2)
-                        .capacity(10)
-                        .price(100.)
-                        .name("name")
-                        .nameEng("nameEng")
-                        .build()))
-            .build();
-        Order order = getOrderDoneByUser();
-        order.setAmountOfBagsOrdered(Collections.singletonMap(1, 1));
-        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
-        when(bagRepository.findAllByOrder(dto.getOrderId())).thenReturn(getBag4list());
-        MakeOrderAgainDto result = ubsService.makeOrderAgain(new Locale("en"), 1L);
-
-        assertEquals(dto, result);
-        verify(orderRepository, times(1)).findById(1L);
-        verify(bagRepository, times(1)).findAllByOrder(any());
-    }
-
-    @Test
-    void makeOrderAgainShouldThrowOrderNotFoundException() {
-        Locale locale = new Locale("en");
-        Exception thrown = assertThrows(NotFoundException.class,
-            () -> ubsService.makeOrderAgain(locale, 1L));
-        assertEquals(ORDER_WITH_CURRENT_ID_DOES_NOT_EXIST, thrown.getMessage());
-    }
-
-    @Test
-    void makeOrderAgainShouldThrowBadOrderStatusException() {
-        Order order = getOrderDoneByUser();
-        order.setOrderStatus(OrderStatus.CANCELED);
-        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
-        Locale locale = new Locale("en");
-        Exception thrown = assertThrows(BadRequestException.class,
-            () -> ubsService.makeOrderAgain(locale, 1L));
-        assertEquals(thrown.getMessage(), ErrorMessage.BAD_ORDER_STATUS_REQUEST
-            + order.getOrderStatus());
-    }
-
-    @Test
     void findUserByUuid() {
         String uuid = "87df9ad5-6393-441f-8423-8b2e770b01a8";
         when(userRepository.findUserByUuid(uuid)).thenReturn(Optional.of(getUser()));
@@ -1497,7 +1501,7 @@ class UBSClientServiceImplTest {
         when(userRepository.findById(1L)).thenReturn(Optional.ofNullable(user));
         ubsService.markUserAsDeactivated(1L);
         verify(userRepository).findById(1L);
-        verify(userRemoteClient).markUserDeactivated(user.getUuid());
+        verify(userRemoteClient).markUserDeactivated(anyString());
     }
 
     @Test
@@ -1640,7 +1644,7 @@ class UBSClientServiceImplTest {
 
     @Test
     void updateProfileData() {
-        UBSClientServiceImpl ubsClientService = spy(ubsService);
+        UBSClientServiceImpl ubsClientServiceSpy = spy(ubsService);
 
         User user = getUserWithBotNotifyTrue();
         TelegramBot telegramBot = getTelegramBotNotifyTrue();
@@ -1657,11 +1661,11 @@ class UBSClientServiceImplTest {
         when(modelMapper.map(addressDto.get(0), OrderAddressDtoRequest.class)).thenReturn(updateAddressRequestDto);
         when(modelMapper.map(addressDto.get(1), OrderAddressDtoRequest.class)).thenReturn(updateAddressRequestDto);
         doReturn(new OrderWithAddressesResponseDto())
-            .when(ubsClientService).updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
+            .when(ubsClientServiceSpy).updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
         when(userRepository.save(user)).thenReturn(user);
         when(modelMapper.map(user, UserProfileUpdateDto.class)).thenReturn(userProfileUpdateDto);
 
-        ubsClientService.updateProfileData(uuid, userProfileUpdateDto);
+        ubsClientServiceSpy.updateProfileData(uuid, userProfileUpdateDto);
 
         for (Bot bot : botList) {
             Assertions.assertNotNull(bot);
@@ -1677,7 +1681,7 @@ class UBSClientServiceImplTest {
         verify(viberBotRepository).findByUser(user);
         verify(modelMapper).map(addressDto.get(0), OrderAddressDtoRequest.class);
         verify(modelMapper).map(addressDto.get(1), OrderAddressDtoRequest.class);
-        verify(ubsClientService, times(2)).updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
+        verify(ubsClientServiceSpy, times(2)).updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
         verify(userRepository).save(user);
         verify(modelMapper).map(user, UserProfileUpdateDto.class);
     }
@@ -1696,7 +1700,7 @@ class UBSClientServiceImplTest {
 
     @Test
     void updateProfileDataWhenAddressPlaceIdIsNull() {
-        UBSClientServiceImpl ubsClientService = spy(ubsService);
+        UBSClientServiceImpl ubsClientServiceSpy = spy(ubsService);
 
         User user = getUserWithBotNotifyTrue();
         TelegramBot telegramBot = getTelegramBotNotifyTrue();
@@ -1715,26 +1719,26 @@ class UBSClientServiceImplTest {
         when(viberBotRepository.findByUser(user)).thenReturn(Optional.of(viberBot));
         when(modelMapper.map(addressDto.get(0), OrderAddressDtoRequest.class)).thenReturn(updateAddressRequestDto);
         when(modelMapper.map(addressDto.get(1), OrderAddressDtoRequest.class)).thenReturn(updateAddressRequestDto);
-        doReturn(new OrderWithAddressesResponseDto()).when(ubsClientService)
+        doReturn(new OrderWithAddressesResponseDto()).when(ubsClientServiceSpy)
             .updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
         when(userRepository.save(user)).thenReturn(user);
         when(modelMapper.map(user, UserProfileUpdateDto.class)).thenReturn(userProfileUpdateDto);
 
-        ubsClientService.updateProfileData(uuid, userProfileUpdateDto);
+        ubsClientServiceSpy.updateProfileData(uuid, userProfileUpdateDto);
 
         verify(userRepository).findUserByUuid(uuid);
         verify(telegramBotRepository).findByUser(user);
         verify(viberBotRepository).findByUser(user);
         verify(modelMapper).map(addressDto.get(0), OrderAddressDtoRequest.class);
         verify(modelMapper).map(addressDto.get(1), OrderAddressDtoRequest.class);
-        verify(ubsClientService, times(2)).updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
+        verify(ubsClientServiceSpy, times(2)).updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
         verify(userRepository).save(user);
         verify(modelMapper).map(user, UserProfileUpdateDto.class);
     }
 
     @Test
     void updateProfileDataIfTelegramBotNotExists() {
-        UBSClientServiceImpl ubsClientService = spy(ubsService);
+        UBSClientServiceImpl ubsClientServiceSpy = spy(ubsService);
 
         User user = getUserWithBotNotifyTrue();
         List<AddressDto> addressDto = addressDtoList();
@@ -1748,11 +1752,11 @@ class UBSClientServiceImplTest {
         when(modelMapper.map(addressDto.get(0), OrderAddressDtoRequest.class)).thenReturn(updateAddressRequestDto);
         when(modelMapper.map(addressDto.get(1), OrderAddressDtoRequest.class)).thenReturn(updateAddressRequestDto);
         doReturn(new OrderWithAddressesResponseDto())
-            .when(ubsClientService).updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
+            .when(ubsClientServiceSpy).updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
         when(userRepository.save(user)).thenReturn(user);
         when(modelMapper.map(user, UserProfileUpdateDto.class)).thenReturn(userProfileUpdateDto);
 
-        ubsClientService.updateProfileData(uuid, userProfileUpdateDto);
+        ubsClientServiceSpy.updateProfileData(uuid, userProfileUpdateDto);
 
         assertFalse(userProfileUpdateDto.getTelegramIsNotify());
 
@@ -1761,7 +1765,7 @@ class UBSClientServiceImplTest {
         verify(viberBotRepository).findByUser(user);
         verify(modelMapper).map(addressDto.get(0), OrderAddressDtoRequest.class);
         verify(modelMapper).map(addressDto.get(1), OrderAddressDtoRequest.class);
-        verify(ubsClientService, times(2)).updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
+        verify(ubsClientServiceSpy, times(2)).updateCurrentAddressForOrder(updateAddressRequestDto, uuid);
         verify(userRepository).save(user);
         verify(modelMapper).map(user, UserProfileUpdateDto.class);
     }
@@ -2279,7 +2283,7 @@ class UBSClientServiceImplTest {
 
     @Test
     void testUpdateCurrentAddressForOrderWhenPlaceIdIsNull() {
-        UBSClientService ubsClientService = spy(ubsService);
+        UBSClientService ubsClientServiceSpy = spy(ubsService);
 
         long addressId = 1L;
         long userId = 2L;
@@ -2300,23 +2304,23 @@ class UBSClientServiceImplTest {
 
         when(userRepository.findByUuid(uuid)).thenReturn(user);
         when(addressRepository.findById(addressId)).thenReturn(Optional.of(address));
-        doReturn(new OrderWithAddressesResponseDto()).when(ubsClientService).findAllAddressesForCurrentOrder(uuid);
+        doReturn(new OrderWithAddressesResponseDto()).when(ubsClientServiceSpy).findAllAddressesForCurrentOrder(uuid);
         when(modelMapper.map(dtoRequest, Address.class)).thenReturn(address.setAddressComment(newComment));
 
-        ubsClientService.updateCurrentAddressForOrder(dtoRequest, uuid);
+        ubsClientServiceSpy.updateCurrentAddressForOrder(dtoRequest, uuid);
 
         assertEquals(address.getAddressComment(), newComment);
 
         verify(userRepository).findByUuid(uuid);
         verify(addressRepository).findById(addressId);
-        verify(ubsClientService).findAllAddressesForCurrentOrder(uuid);
+        verify(ubsClientServiceSpy).findAllAddressesForCurrentOrder(uuid);
         verify(modelMapper).map(dtoRequest, Address.class);
         verify(addressRepository).save(address);
     }
 
     @Test
     void testDeleteCurrentAddressForOrderWhenAddressIsActual() {
-        UBSClientServiceImpl ubsClientService = spy(ubsService);
+        UBSClientServiceImpl ubsClientServiceSpy = spy(ubsService);
 
         Long firstAddressId = 1L;
         Long secondAddressId = 2L;
@@ -2332,9 +2336,9 @@ class UBSClientServiceImplTest {
         when(addressRepository.findById(firstAddressId)).thenReturn(Optional.of(firstAddress));
         when(addressRepository.findAnyByUserIdAndAddressStatusNotDeleted(user.getId()))
             .thenReturn(Optional.of(secondAddress));
-        doReturn(new OrderWithAddressesResponseDto()).when(ubsClientService).findAllAddressesForCurrentOrder(uuid);
+        doReturn(new OrderWithAddressesResponseDto()).when(ubsClientServiceSpy).findAllAddressesForCurrentOrder(uuid);
 
-        ubsClientService.deleteCurrentAddressForOrder(firstAddressId, uuid);
+        ubsClientServiceSpy.deleteCurrentAddressForOrder(firstAddressId, uuid);
 
         Assertions.assertFalse(firstAddress.getActual());
         assertEquals(AddressStatus.DELETED, firstAddress.getAddressStatus());
@@ -2342,12 +2346,12 @@ class UBSClientServiceImplTest {
 
         verify(addressRepository).findById(firstAddressId);
         verify(addressRepository).findAnyByUserIdAndAddressStatusNotDeleted(user.getId());
-        verify(ubsClientService).findAllAddressesForCurrentOrder(uuid);
+        verify(ubsClientServiceSpy).findAllAddressesForCurrentOrder(uuid);
     }
 
     @Test
     void testDeleteCurrentAddressForOrderWhenAddressIsNotActual() {
-        UBSClientServiceImpl ubsClientService = spy(ubsService);
+        UBSClientServiceImpl ubsClientServiceSpy = spy(ubsService);
 
         Long firstAddressId = 1L;
         Address firstAddress = getAddress();
@@ -2358,38 +2362,38 @@ class UBSClientServiceImplTest {
 
         when(addressRepository.findById(firstAddressId)).thenReturn(Optional.of(firstAddress));
 
-        doReturn(new OrderWithAddressesResponseDto()).when(ubsClientService).findAllAddressesForCurrentOrder(uuid);
+        doReturn(new OrderWithAddressesResponseDto()).when(ubsClientServiceSpy).findAllAddressesForCurrentOrder(uuid);
 
-        ubsClientService.deleteCurrentAddressForOrder(firstAddressId, uuid);
+        ubsClientServiceSpy.deleteCurrentAddressForOrder(firstAddressId, uuid);
 
         assertEquals(AddressStatus.DELETED, firstAddress.getAddressStatus());
 
         verify(addressRepository).findById(firstAddressId);
         verify(addressRepository, times(0)).findAnyByUserIdAndAddressStatusNotDeleted(anyLong());
-        verify(ubsClientService).findAllAddressesForCurrentOrder(uuid);
+        verify(ubsClientServiceSpy).findAllAddressesForCurrentOrder(uuid);
     }
 
     @Test
     void testDeleteCurrentAddressForOrderWithUnexistingAddress() {
-        UBSClientServiceImpl ubsClientService = spy(ubsService);
+        UBSClientServiceImpl ubsClientServiceSpy = spy(ubsService);
 
         Long addressId = 1L;
 
         when(addressRepository.findById(addressId)).thenReturn(Optional.empty());
 
         NotFoundException exception = assertThrows(NotFoundException.class,
-            () -> ubsClientService.deleteCurrentAddressForOrder(addressId, "qwe"));
+            () -> ubsClientServiceSpy.deleteCurrentAddressForOrder(addressId, "qwe"));
 
         assertEquals(NOT_FOUND_ADDRESS_ID_FOR_CURRENT_USER + addressId, exception.getMessage());
 
         verify(addressRepository).findById(addressId);
         verify(addressRepository, times(0)).findAnyByUserIdAndAddressStatusNotDeleted(anyLong());
-        verify(ubsClientService, times(0)).findAllAddressesForCurrentOrder(anyString());
+        verify(ubsClientServiceSpy, times(0)).findAllAddressesForCurrentOrder(anyString());
     }
 
     @Test
     void testDeleteCurrentAddressForOrderForWrongUser() {
-        UBSClientServiceImpl ubsClientService = spy(ubsService);
+        UBSClientServiceImpl ubsClientServiceSpy = spy(ubsService);
 
         Long firstAddressId = 1L;
         Address firstAddress = getAddress();
@@ -2401,18 +2405,18 @@ class UBSClientServiceImplTest {
         when(addressRepository.findById(firstAddressId)).thenReturn(Optional.of(firstAddress));
 
         AccessDeniedException exception = assertThrows(AccessDeniedException.class,
-            () -> ubsClientService.deleteCurrentAddressForOrder(firstAddressId, uuid));
+            () -> ubsClientServiceSpy.deleteCurrentAddressForOrder(firstAddressId, uuid));
 
         assertEquals(CANNOT_DELETE_ADDRESS, exception.getMessage());
 
         verify(addressRepository).findById(firstAddressId);
         verify(addressRepository, times(0)).findAnyByUserIdAndAddressStatusNotDeleted(anyLong());
-        verify(ubsClientService, times(0)).findAllAddressesForCurrentOrder(anyString());
+        verify(ubsClientServiceSpy, times(0)).findAllAddressesForCurrentOrder(anyString());
     }
 
     @Test
     void testDeleteCurrentAddressForOrderWhenAddressAlreadyDeleted() {
-        UBSClientServiceImpl ubsClientService = spy(ubsService);
+        UBSClientServiceImpl ubsClientServiceSpy = spy(ubsService);
 
         Long firstAddressId = 1L;
         Address firstAddress = getAddress();
@@ -2425,18 +2429,18 @@ class UBSClientServiceImplTest {
         when(addressRepository.findById(firstAddressId)).thenReturn(Optional.of(firstAddress));
 
         BadRequestException exception = assertThrows(BadRequestException.class,
-            () -> ubsClientService.deleteCurrentAddressForOrder(firstAddressId, uuid));
+            () -> ubsClientServiceSpy.deleteCurrentAddressForOrder(firstAddressId, uuid));
 
         assertEquals(CANNOT_DELETE_ALREADY_DELETED_ADDRESS, exception.getMessage());
 
         verify(addressRepository).findById(firstAddressId);
         verify(addressRepository, times(0)).findAnyByUserIdAndAddressStatusNotDeleted(anyLong());
-        verify(ubsClientService, times(0)).findAllAddressesForCurrentOrder(anyString());
+        verify(ubsClientServiceSpy, times(0)).findAllAddressesForCurrentOrder(anyString());
     }
 
     @Test
     void testDeleteCurrentAddressForOrderWhenItIsLastAddress() {
-        UBSClientServiceImpl ubsClientService = spy(ubsService);
+        UBSClientServiceImpl ubsClientServiceSpy = spy(ubsService);
 
         Long firstAddressId = 1L;
         Address firstAddress = getAddress();
@@ -2448,16 +2452,16 @@ class UBSClientServiceImplTest {
 
         when(addressRepository.findById(firstAddressId)).thenReturn(Optional.of(firstAddress));
         when(addressRepository.findAnyByUserIdAndAddressStatusNotDeleted(user.getId())).thenReturn(Optional.empty());
-        doReturn(new OrderWithAddressesResponseDto()).when(ubsClientService).findAllAddressesForCurrentOrder(uuid);
+        doReturn(new OrderWithAddressesResponseDto()).when(ubsClientServiceSpy).findAllAddressesForCurrentOrder(uuid);
 
-        ubsClientService.deleteCurrentAddressForOrder(firstAddressId, uuid);
+        ubsClientServiceSpy.deleteCurrentAddressForOrder(firstAddressId, uuid);
 
         Assertions.assertFalse(firstAddress.getActual());
         assertEquals(AddressStatus.DELETED, firstAddress.getAddressStatus());
 
         verify(addressRepository).findById(firstAddressId);
         verify(addressRepository).findAnyByUserIdAndAddressStatusNotDeleted(user.getId());
-        verify(ubsClientService).findAllAddressesForCurrentOrder(uuid);
+        verify(ubsClientServiceSpy).findAllAddressesForCurrentOrder(uuid);
     }
 
     @Test
@@ -3014,6 +3018,7 @@ class UBSClientServiceImplTest {
         bag.setTariffsInfo(tariffsInfo);
         tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
@@ -3023,8 +3028,6 @@ class UBSClientServiceImplTest {
         when(certificateRepository.findById("1111-1234")).thenReturn(Optional.of(getCertificate()));
         when(modelMapper.map(dto.getPersonalData(), UBSuser.class)).thenReturn(ubSuser);
         when(orderRepository.findById(any())).thenReturn(Optional.of(order1));
-        when(encryptionUtil.formRequestSignature(any(), eq(null), eq("1"))).thenReturn("TestValue");
-        when(fondyClient.getCheckoutResponse(any())).thenReturn(getSuccessfulFondyResponse());
 
         FondyOrderResponse result = ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null);
         Assertions.assertNotNull(result);
@@ -3121,6 +3124,7 @@ class UBSClientServiceImplTest {
                 f.set(ubsService, "1");
             }
         }
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(getTariffInfoWithLimitOfBags()));
@@ -3160,7 +3164,7 @@ class UBSClientServiceImplTest {
                 f.set(ubsService, "1");
             }
         }
-
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -3203,7 +3207,7 @@ class UBSClientServiceImplTest {
                 f.set(ubsService, "1");
             }
         }
-
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -3211,31 +3215,6 @@ class UBSClientServiceImplTest {
 
         assertThrows(BadRequestException.class,
             () -> ubsService.saveFullOrderToDB(dto, "35467585763t4sfgchjfuyetf", null));
-    }
-
-    @Test
-    void validatePaymentClientTest() {
-
-        PaymentResponseDto dto = getPaymentResponseDto();
-
-        when(orderRepository.findById(1L)).thenReturn(Optional.ofNullable(getOrdersDto()));
-        when(encryptionUtil.checkIfResponseSignatureIsValid(dto, null)).thenReturn(true);
-
-        ubsService.validatePaymentClient(dto);
-
-        verify(orderRepository, times(2)).findById(1L);
-        verify(encryptionUtil).checkIfResponseSignatureIsValid(dto, null);
-
-    }
-
-    @Test
-    void validatePaymentClientExceptionTest() {
-        PaymentResponseDto dto = getPaymentResponseDto();
-
-        when(orderRepository.findById(1L))
-            .thenReturn(Optional.ofNullable(getOrdersDto()));
-
-        assertThrows(BadRequestException.class, () -> ubsService.validatePaymentClient(dto));
     }
 
     @Test
@@ -3271,13 +3250,14 @@ class UBSClientServiceImplTest {
     void getPaymentResponseFromFondy() {
         Order order = getOrder();
         FondyPaymentResponse expected = FondyPaymentResponse.builder()
-            .paymentStatus(order.getPayment().getFirst().getResponseStatus())
+            .paymentStatus("success")
             .build();
 
         when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
         when(userRepository.findByUuid(order.getUser().getUuid())).thenReturn(order.getUser());
 
-        assertEquals(expected, ubsService.getPaymentResponseFromFondy(1L, order.getUser().getUuid()));
+        assertEquals(expected,
+            ubsService.getPaymentResponseFromFondy(1L, order.getUser().getUuid()));
     }
 
     @Test
@@ -3314,14 +3294,11 @@ class UBSClientServiceImplTest {
         Order order = getOrderTest();
         User user = getTestUser();
         Bag bag = bagDto();
-
-        List<Bag> bags = new ArrayList<>();
         List<Order> orderList = new ArrayList<>();
 
         bag.setCapacity(120);
         bag.setFullPrice(1200_00L);
         order.setAmountOfBagsOrdered(Map.of(1, 10));
-        bags.add(bag);
         order.setUser(user);
         order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
@@ -3365,14 +3342,11 @@ class UBSClientServiceImplTest {
         Order order = getOrderTest();
         User user = getTestUser();
         Bag bag = bagDto();
-
-        List<Bag> bags = new ArrayList<>();
         List<Order> orderList = new ArrayList<>();
 
         bag.setCapacity(120);
         bag.setFullPrice(1200_00L);
         order.setAmountOfBagsOrdered(Map.of(1, 10));
-        bags.add(bag);
         order.setUser(user);
         order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
         orderList.add(order);
@@ -3409,19 +3383,15 @@ class UBSClientServiceImplTest {
     void testOrdersForUserWithExportedQuantity() {
         OrderStatusTranslation orderStatusTranslation = getOrderStatusTranslation();
         OrderPaymentStatusTranslation orderPaymentStatusTranslation = getOrderPaymentStatusTranslation();
-        OrdersDataForUserDto ordersDataForUserDto = getOrderStatusDto();
         Order order = getOrderTest();
         order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         User user = getTestUser();
         Bag bag = bagDto();
-
-        List<Bag> bags = new ArrayList<>();
         List<Order> orderList = new ArrayList<>();
 
         bag.setCapacity(120);
         bag.setFullPrice(1200_00L);
         order.setExportedQuantity(Map.of(1, 10));
-        bags.add(bag);
         order.setUser(user);
         order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
         orderList.add(order);
@@ -3457,18 +3427,14 @@ class UBSClientServiceImplTest {
     void testOrdersForUserWithConfirmedQuantity() {
         OrderStatusTranslation orderStatusTranslation = getOrderStatusTranslation();
         OrderPaymentStatusTranslation orderPaymentStatusTranslation = getOrderPaymentStatusTranslation();
-        OrdersDataForUserDto ordersDataForUserDto = getOrderStatusDto();
         Order order = getOrderTest();
         User user = getTestUser();
         Bag bag = bagDto();
-
-        List<Bag> bags = new ArrayList<>();
         List<Order> orderList = new ArrayList<>();
 
         bag.setCapacity(120);
         bag.setFullPrice(1200_00L);
         order.setConfirmedQuantity(Map.of(1, 10));
-        bags.add(bag);
         order.setUser(user);
         order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
@@ -3662,6 +3628,7 @@ class UBSClientServiceImplTest {
         bag.setTariffsInfo(tariffsInfo);
         tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -3706,6 +3673,7 @@ class UBSClientServiceImplTest {
         bag.setTariffsInfo(tariffsInfo);
         tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -3746,7 +3714,7 @@ class UBSClientServiceImplTest {
         bag.setTariffsInfo(tariffsInfo);
         tariffsInfo.setBags(List.of(bag));
         order.setTariffsInfo(tariffsInfo);
-
+        when(addressRepository.findById(anyLong())).thenReturn(Optional.of(ModelUtils.getAddress()));
         when(userRepository.findByUuid("35467585763t4sfgchjfuyetf")).thenReturn(user);
         when(tariffsInfoRepository.findTariffsInfoByBagIdAndLocationId(anyList(), anyLong()))
             .thenReturn(Optional.of(tariffsInfo));
@@ -3793,7 +3761,8 @@ class UBSClientServiceImplTest {
     void getAllAuthoritiesService() {
         Optional<Employee> employeeOptional = Optional.ofNullable(getEmployee());
         when(employeeRepository.findByEmail(anyString())).thenReturn(employeeOptional);
-        when(userRemoteClient.getAllAuthorities(employeeOptional.get().getEmail()))
+        Employee employee = employeeOptional.orElseThrow(() -> new IllegalStateException("Employee not found"));
+        when(userRemoteClient.getAllAuthorities(employee.getEmail()))
             .thenReturn(Set.copyOf(ModelUtils.getAllAuthorities()));
         Set<String> authoritiesResult = ubsService.getAllAuthorities(employeeOptional.get().getEmail());
         Set<String> authExpected = Set.of("SEE_CLIENTS_PAGE");
@@ -3810,13 +3779,10 @@ class UBSClientServiceImplTest {
         Order order = getOrderTest();
         User user = getTestUser();
         Bag bag = bagDto();
-
-        List<Bag> bags = new ArrayList<>();
         List<Order> orderList = new ArrayList<>();
 
         bag.setCapacity(120);
         bag.setFullPrice(1200_00L);
-        bags.add(bag);
         order.setUser(user);
         order.updateWithNewOrderBags(Collections.singletonList(ModelUtils.getOrderBag()));
         order.setOrderPaymentStatus(OrderPaymentStatus.PAID);
@@ -3927,5 +3893,83 @@ class UBSClientServiceImplTest {
         when(employeeRepository.findByEmail(TEST_EMAIL)).thenReturn(Optional.empty());
         assertThrows(NotFoundException.class, () -> ubsService.getEmployeeLoginPositionNames(TEST_EMAIL));
         verify(employeeRepository).findByEmail(TEST_EMAIL);
+    }
+
+    @Test
+    void shouldExtractOrderIdFromDataSuccessfully() {
+        String data = Base64.getEncoder().encodeToString("{\"order_id\":\"123\"}".getBytes());
+        Long result = ubsClientService.extractOrderIdFromData(data);
+        assertEquals(123L, result);
+    }
+
+    @Test
+    void shouldExtractStatusFromDataSuccessfully() {
+        String data = Base64.getEncoder().encodeToString("{\"status\":\"approved\"}".getBytes());
+        String result = ubsClientService.extractStatusFromData(data);
+        assertEquals("approved", result);
+    }
+
+    @Test
+    void shouldConvertToPaymentSuccessfully() {
+        String data = Base64.getEncoder().encodeToString(
+            "{\"amount\":\"100.0\",\"currency\":\"UAH\",\"description\":\"Test\",\"status\":\"approved\"}".getBytes());
+        Payment result = ubsClientService.convertToPayment(data);
+
+        assertEquals(10000L, result.getAmount());
+        assertEquals("UAH", result.getCurrency());
+        assertEquals("Test", result.getComment());
+        assertEquals("approved", result.getOrderStatus());
+    }
+
+    @Test
+    void shouldValidatePaymentLiqPaySuccessfully() {
+        PaymentResponseLiqPayDto dto = new PaymentResponseLiqPayDto();
+        String json =
+            "{\"order_id\":\"123\",\"amount\":\"100.0\",\"currency\":\"UAH\",\"description\":\"Test\",\"status\":\"approved\"}";
+        String encodedJson = Base64.getEncoder().encodeToString(json.getBytes());
+        Order order = new Order();
+        order.setId(123L);
+        Payment payment = new Payment();
+        dto.setData(encodedJson);
+        dto.setSignature("signature");
+
+        UBSClientServiceImpl ubsClientServiceSpy = Mockito.spy(ubsClientService);
+
+        doNothing().when(ubsClientServiceSpy).checkSignature(isNull(), anyString(), anyString());
+        when(ubsClientServiceSpy.extractOrderIdFromData(encodedJson)).thenReturn(123L);
+        when(orderRepository.findById(anyLong())).thenReturn(Optional.of(order));
+        when(ubsClientServiceSpy.convertToPayment(dto.getData())).thenReturn(payment);
+        doNothing().when(ubsClientServiceSpy).checkOrderStatusApproved(any(Payment.class), any(Order.class));
+        doNothing().when(notificationService).notifyPaidOrder(any(Order.class));
+
+        Long result = ubsClientServiceSpy.validatePaymentLiqPay(dto);
+        assertEquals(123L, result);
+    }
+
+    @Test
+    void shouldThrowNotFoundExceptionWhenOrderNotFound() {
+        // Given
+        PaymentResponseLiqPayDto dto = new PaymentResponseLiqPayDto();
+        String json = "{\"order_id\":\"123\"}";
+        String encodedJson = Base64.getEncoder().encodeToString(json.getBytes());
+        dto.setData(encodedJson);
+        dto.setSignature("signature");
+
+        UBSClientServiceImpl ubsClientServiceSpy = Mockito.spy(ubsClientService);
+
+        doNothing().when(ubsClientServiceSpy).checkSignature(isNull(), anyString(), anyString());
+        when(ubsClientServiceSpy.extractOrderIdFromData(encodedJson)).thenReturn(1L);
+        when(orderRepository.findById(anyLong())).thenReturn(Optional.empty());
+
+        assertThrows(NotFoundException.class, () -> ubsClientServiceSpy.validatePaymentLiqPay(dto));
+    }
+
+    @Test
+    void shouldThrowExceptionWhenSignatureIsInvalid() {
+        String privateKey = "privateKey";
+        String data = "data";
+        String wrongSignature = "abc";
+        assertThrows(WrongSignatureException.class,
+            () -> ubsClientService.checkSignature(privateKey, data, wrongSignature));
     }
 }
